kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend-deployment
  namespace: wanderlust
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata: 
      name: backend
      labels:
        app: backend
    spec:
      containers: 
        - name: backend
          image: harshalg01/wanderlust-api:v9
          ports:
            - containerPort: 8080
---
apiVersion: v1 
kind: Service
metadata:
  name: backend-svc
  namespace: wanderlust
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
