kubernetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: wanderlust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend 
    spec:
      containers: 
        - name: frontend
          image: harshalg01/wanderlust-web:v5
          ports:
            - containerPort: 5173
          

---

apiVersion: v1
kind: Service 
metadata:
  name: frontend-svc
  namespace: wanderlust
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
